<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorMainPrimary">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/loyalty_bonus_signup_tool_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/colorMainPrimary"
        android:elevation="0dp"
        android:layout_alignParentTop="true"
        app:theme="@style/DarkActivityTheme"
        app:popupTheme="@style/Theme.AppCompat.Light"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/loyalty_bonus_signup_tool_bar"
        android:fillViewport="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/loyalty_bonus_signup_login_button"
                android:layout_width="@dimen/twoHunderedAndFourtyDpDimension"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/img_loyalty_login_button"
                android:text="@string/loyalty_bonus_signup_signin_button"
                android:textColor="@color/white"
                android:textSize="@dimen/thirteenSpDimension"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/tenDpDimension"
                />

            <TextView
                android:id="@+id/loyalty_bonus_signup_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/loyalty_bonus_signup_login_button"
                android:layout_margin="@dimen/tenDpDimension"
                android:textSize="@dimen/fifteenSpDimension"
                android:textColor="@color/white"
                android:text="@string/set_email_activity_or_text"
                />

            <View
                android:id="@+id/loyalty_bonus_signup_seperator"
                android:layout_width="@dimen/twoHunderedAndFourtyDpDimension"
                android:layout_height="1dp"
                android:layout_below="@+id/loyalty_bonus_signup_or"
                android:background="@color/viewPagerTabBlue"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/fifteenDpDimension"
                android:layout_marginTop="@dimen/fifteenDpDimension"
                />

            <TextView
                android:id="@+id/loyalty_bonus_signup_header_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/loyalty_bonus_signup_seperator"
                android:textSize="@dimen/fifteenSpDimension"
                android:textColor="@color/white"
                android:text="@string/loyalty_bonus_signup_button"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/fifteenDpDimension"
                />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/loyalty_bonus_signup_name_edit"
                android:layout_width="@dimen/twoHunderedAndFourtyDpDimension"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/loyalty_bonus_signup_header_sub"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textSize="@dimen/fifteenSpDimension"
                android:hint="@string/loyalty_bonus_signup_first_name"
                android:textColorHint="@color/viewPagerTabBlue"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:layout_marginBottom="@dimen/tenDpDimension"
                />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/loyalty_bonus_signup_email_edit"
                android:layout_width="@dimen/twoHunderedAndFourtyDpDimension"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/loyalty_bonus_signup_name_edit"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textSize="@dimen/fifteenSpDimension"
                android:hint="@string/loyalty_bonus_signin_email_hint"
                android:textColorHint="@color/viewPagerTabBlue"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:layout_marginBottom="@dimen/tenDpDimension"
                android:enabled="false"
                />
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/loyalty_bonus_signup_password_edit"
                android:layout_width="@dimen/twoHunderedAndFourtyDpDimension"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/loyalty_bonus_signup_email_edit"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textSize="@dimen/fifteenSpDimension"
                android:hint="@string/loyalty_bonus_signup_password_hint"
                android:textColorHint="@color/viewPagerTabBlue"
                android:inputType="textWebPassword"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:layout_marginBottom="@dimen/tenDpDimension"
                />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/loyalty_bonus_signup_confirm_password_edit"
                android:layout_width="@dimen/twoHunderedAndFourtyDpDimension"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/loyalty_bonus_signup_password_edit"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textSize="@dimen/fifteenSpDimension"
                android:hint="@string/loyalty_bonus_signup_confirm_password"
                android:textColorHint="@color/viewPagerTabBlue"
                android:inputType="textWebPassword"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:layout_marginBottom="@dimen/twentyDpDimension"
                />
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/loyalty_bonus_signup_gender"
                android:layout_width="@dimen/twoHunderedAndFourtyDpDimension"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/loyalty_bonus_signup_confirm_password_edit"
                android:spinnerMode="dropdown"
                android:layout_marginBottom="@dimen/tenDpDimension"
                />

            <TextView
                android:id="@+id/loyalty_bonus_signup_dob"
                android:layout_width="@dimen/twoHunderedAndFourtyDpDimension"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/loyalty_bonus_signup_gender"
                android:layout_marginTop="@dimen/tenDpDimension"
                android:layout_marginBottom="@dimen/fifteenDpDimension"
                android:textSize="@dimen/fifteenSpDimension"
                android:paddingTop="@dimen/tenDpDimension"
                android:paddingBottom="@dimen/tenDpDimension"
                android:paddingLeft="@dimen/fifteenDpDimension"
                android:paddingRight="@dimen/fifteenDpDimension"
                android:textColor="@color/white"
                android:textColorHint="@color/viewPagerTabBlue"
                android:hint="@string/loyalty_bonus_signup_dob_hint"
                />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/loyalty_bonus_signup_country"
                android:layout_width="@dimen/twoHunderedAndFourtyDpDimension"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/loyalty_bonus_signup_dob"
                android:spinnerMode="dropdown"
                android:layout_marginBottom="@dimen/fifteenDpDimension"
                />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/loyalty_bonus_signup_terms_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loyalty_bonus_signup_country"
                android:layout_alignLeft="@+id/loyalty_bonus_signup_country"
                android:layout_alignStart="@+id/loyalty_bonus_signup_country"
                android:padding="@dimen/tenDpDimension"
                android:layout_marginTop="@dimen/tenDpDimension"
                android:layout_marginBottom="@dimen/tenDpDimension"
                android:layout_marginLeft="@dimen/tenDpDimension"
                android:layout_marginStart="@dimen/tenDpDimension"
                />

            <TextView
                android:id="@+id/loyalty_bonus_signup_terms_text"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loyalty_bonus_signup_country"
                android:layout_toRightOf="@+id/loyalty_bonus_signup_terms_check"
                android:layout_toEndOf="@+id/loyalty_bonus_signup_terms_check"
                android:text="@string/loyalty_bonus_signup_terms_text"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/tenDpDimension"
                android:layout_marginBottom="@dimen/tenDpDimension"
                />

            <ProgressBar
                android:id="@+id/loyalty_bonus_signup_progress_bar"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/loyalty_bonus_signup_terms_text"
                android:layout_marginBottom="@dimen/fifteenDpDimension"
                android:visibility="invisible"
                />

            <TextView
                android:id="@+id/loyalty_bonus_signup_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/loyalty_bonus_signup_terms_text"
                android:maxLines="1"
                android:textColor="@color/colorMainAccent"
                android:paddingRight="@dimen/tenDpDimension"
                android:paddingEnd="@dimen/tenDpDimension"
                android:paddingLeft="@dimen/tenDpDimension"
                android:paddingStart="@dimen/tenDpDimension"
                android:layout_marginBottom="@dimen/fifteenDpDimension"
                />

            <Button
                android:id="@+id/loyalty_bonus_signup_button"
                android:layout_width="@dimen/twoHunderedAndFourtyDpDimension"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/loyalty_bonus_signup_info"
                android:background="@color/colorMainAccent"
                android:text="@string/loyalty_bonus_signup_button"
                android:textColor="@color/colorMainPrimary"
                android:layout_marginBottom="@dimen/tenDpDimension"
                />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>