<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="2dp"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="250dp" android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:id="@+id/notification_permission_image_parent"
            android:background="@drawable/img_permission_dialog_image_back"
            >
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/notification_permission_image"
                android:layout_width="@dimen/oneHunderedAndFiftyDpDimension"
                android:layout_height="@dimen/oneHunderedAndFiftyDpDimension"
                android:layout_centerHorizontal="true"
                android:padding="24dp"
                app:srcCompat="@drawable/ic_lock_notif_permission_icon"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/notification_permission_info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notification_permission_image_parent"
            android:layout_centerHorizontal="true"
            android:textColor="@color/textPrimaryColor"
            android:textSize="@dimen/fifteenSpDimension"
            android:text="@string/appLock_activity_notif_dialog_message"
            android:maxWidth="150dp"
            android:textAlignment="center"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="12dp"
            android:layout_marginTop="@dimen/twentyDpDimension"
            />
        <TextView
            android:id="@+id/notification_permission_info_text_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notification_permission_info_text"
            android:layout_centerHorizontal="true"
            android:textColor="@color/textPrimaryColor"
            android:textSize="@dimen/fifteenSpDimension"
            android:text="@string/appLock_activity_notif_dialog_message_two"
            android:textAlignment="center"
            android:maxWidth="150dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="24dp"
            />

        <View
            android:id="@+id/notification_permission_bottom_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/notification_permission_info_text_sub"
            android:layout_marginLeft="@dimen/thirtyDpDimension"
            android:layout_marginRight="@dimen/thirtyDpDimension"
            android:background="@color/textPrimaryColor"
            />

        <View
            android:id="@+id/notification_permission_button_divider"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_below="@+id/notification_permission_bottom_divider"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/notification_permission_positive_button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_below="@+id/notification_permission_bottom_divider"
            android:padding="10dp"
            android:layout_toRightOf="@+id/notification_permission_button_divider"
            android:layout_toEndOf="@+id/notification_permission_button_divider"
            android:layout_marginBottom="@dimen/tenDpDimension"
            android:layout_marginTop="@dimen/fifteenDpDimension"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorMainPrimary"
            android:text="@string/appLock_activity_usage_dialog_permit_text"
            android:textSize="@dimen/fifteenSpDimension"
            />

        <TextView
            android:id="@+id/notification_permission_negative_button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_below="@+id/notification_permission_bottom_divider"
            android:layout_toLeftOf="@+id/notification_permission_button_divider"
            android:layout_toStartOf="@+id/notification_permission_button_divider"
            android:padding="10dp"
            android:layout_marginBottom="@dimen/tenDpDimension"
            android:layout_marginTop="@dimen/fifteenDpDimension"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/colorMainPrimary"
            android:text="@string/appLock_activity_usage_dialog_cancel_text"
            android:textSize="@dimen/fifteenSpDimension"
            />
    </RelativeLayout>
</android.support.v7.widget.CardView>
